blogsvr_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blogsvrhttp
  labels:
    app: blogsvr
spec:
  type: NodePort
  ports:
    - port: 30001 # Pod访问端口： 通过使用serviceip:port 来访问集群内的服务
      targetPort: 8848
      protocol: TCP
      name: blogsvrport
  selector:
    app: blogsvr
